new projects: new text

--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -1,8 +1,8 @@
 modalID: 2
-title: "DIY Urbanism: an inside-out perspective"
-date: January 2014-June 2015
-thumbnail: thumbnails/IMG_4415.jpg
-img: IMG_4608.JPG
-collaborator: Federico Savini
-category: "urban activism" 
-description: "**Project context:** Practices of ‘do-it-yourself’ urbanism are increasingly recognized as a new form of engaged citizenship in urban change. These initiatives are however at risk of marginalization and exclusion from formal urban planning processes. **Question:** Why do some DIY groups manage to gain recognition for their initiatives, while others do not? **Approach:** Examined DIY urbanism from the inside, anaylzing the internal organization of two DIY groups, a community of skateboarders in London and a cultural collective in Amsterdam, to understand how internal capacity affects each group's external connectivity to the public, local government and other stakeholders. Methods included interviews with group members, experts and local civil servants and an analysis of social and print media records. **Results and deliverables:** Masters thesis and the article 'The Social Capital of Do-It-Yourself Urbanism: An Inside-Out Perspective on Citizen Activism in London and Amsterdam' (currently under review for publication)."  
+title: "Sterke Steden"
+date: current
+thumbnail: thumbnails/4.jpg
+img: 3.jpg
+collaborator: Provincie of Drenthe
+category: "Omgevingsvisie, DNA, research, workshops" 
+description: "**Project context:** The Province of Drenthe is busy writing their new Omgevingsvisie.  **Question:** What is the DNA of the four largest cities? What are their current challenges and what challenges to they expect to face? What are the opportunities for working together? **Approach:** Together with a team of advisers from Over Morgen, we organized a series of workshops in order to collect data from different key figures in each city. Quantitative data was also collected in order to provide a complete picture of the DNA for each city. **Results and deliverables:** A StoryMap with all of the collected data to be delivered the end of june. Stay tuned!"
