--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,8 +1,8 @@
 modalID: 3
-title: "LiviNG Lombok"
-date: January 2016
-thumbnail: thumbnails/IMG_4891.jpg
-img: IMG_4418.jpg
-collaborator: Karin de Nijs
-category: "neighborhood regeneration"
-description: "**Project context:** Vacancy continues to be both a physical and social problem within today’s urban areas. Alongside the obvious 'waste' of phyiscal space, a large number of vacant premises in a small area gives an impression of forgottenness and lack of care, leading to deeper social issues, such as community degradation, feelings of discomfort and lack of local involvement. **Question:** What are the best solutions for approaching the issue of vacancy in the neighborhood Laan van Nieuw-Guinea in Utrecht? **Approach:** Created a catalogue of the empty buildings and an analysis of comparable successful cases ending with potential uses applicable in Laan van Nieuw-Guinea. In the second phase of the project, we will share this information with local owners, residents, and civil servants to create a platform where ideas and initiatives from the neighboorhood can be paired with the vacant propoerties. **Results and deliverables:** The first phase of the research has resulted in the report 'Leegstand in Lombok', which can be accessed upon request." 
+title: "UrDNA"
+date: current
+thumbnail: thumbnails/last.jpg
+img: urdna.jpg
+collaborator: Muncipality of Alphen aan den Rijn
+category: "Product development, visualizations, citizen participation, Omgevingswet"
+description: "**Project context:** Following the hackathon 'Re-design the Netherlands in 48 hours' our team came up with the idea of UrDNA. Can you imagine what it would be like to provide feedback about your neighborhood on a daily basis? In the palm of your han? While waiting at the bus stop? During the hackathon we have developed a concept and prototype that makes this possible: uDNA. Our interface can be used on a phone or at an interactive board placed throughout an area. This data is collected through the answering of questions by residents and visitors to an area and concerns different themes such as safety, health and accessibility. How do you perceive the noise level in this area? Do you feel safe here? The collected data and feedback provides a picture about the current situation in an area, as well as the desired situation to reach the ‘ideal’ DNA of an area. This information can be compared to existing data sets and norms, and also used at a higher scale to make comparisons between cities. Most importantly, it can be used by policymakers to make better informed decision that are based on real-time data. **Results and deliverables:** The first phase of this project is currently being tested with a pilot in the muncipality of Alphen aan den Rijn. Stay tuned for updates!"
