--- a/data/projects/2014-07-09-project-4.yaml
+++ b/data/projects/2014-07-09-project-4.yaml
@@ -1,8 +1,8 @@
 modalID: 4
-title: Who Makes the City?
-date: June 2015
-thumbnail: thumbnails/IMG_1505.jpg
-img: poster.jpg
-collaborator: "Pablo Moran, Research Masters Urban Studies Students"
-category: urban governance
-description: "**Project context:** Across the globe, citizens, governments, private parties and academics are witnessing a multiplicity in approaches to urban development happening in their cities. Here top-down planning, bottom-up grassroots movements and entrepreneurial motivations collide, revealing conflicts, existing power relations and opportunities for cooperation. **Question:** What will be the division of responsibilities when it comes to determining the city of the future?  **Approach:** Led a 15 person workshop 'Citizens as Citybuilders' aimed at answering this question, designed marketing materials, and organized symposium content. **Results and deliverables:** One-day symposium."
+title: "The 'KinnuB' model"
+date: current
+thumbnail: thumbnails/IMG_9788.jpg
+img: 1.JPG
+collaborator: "The Municipality of Bunnik"
+category: Organizational change
+description: "**Project context:** The municipality of Bunnik is located on the edges of the larger city Utrecht. Although one of the smallest local governments in the Netherlands, the spatial planning department of Bunnik plays an essential role in the region. The spatial planning department within the local government struggled with a limited man capacity in relation the the number of projects, and a switch towards a more integral way of working. **Question:** In light of these issues, the municipality of Bunnik asked VanHooseDotWork to develop a new way of working in its spatial planning department.  **Approach:** Following a period of introductory interviews with employees and a review of current and future projects, we developed KinnuB, a tool which brings every aspect of a project into view. In order to make sure the KinnuB model earned a place in the organization, we organized a series of workshops wherein current projects, such as the further development of the recreation area between Bunnik and Utrecht, were used as case studies to gather an integral perspective.  **Results and deliverables:** This project is still running, for updates see the twitter feed!"
