--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,8 +1,8 @@
 modalID: 6
-title: Fact Sheet
-date: August 2013
-thumbnail: thumbnails/IMG_2567.jpg
-img: IMG_2573.jpg
-collaborator: Deltametropolis Association
-category: Economy
-description: "**Project context:** A shift in both the economic and spatial planning model occurred, leaving farmers and their holdings in the wake of a speeding policy boat. After the economic crisis in 2008, EU policies began to propose cuts to agricultural subsidies and reforms to the Common Agricultural Policy. The trend will only continue into the coming years, as the EU announced less direct funding for agricultural projects, but rather an encouragement for young farmers to become more entrepreneurial.  **Approach:** Analyzed the correlation between EU agricultural policies and Dutch spatial planning since 1950 to understand the implications of this relationship on the future of Dutch rural areas. **Results and deliverables:** Fact sheet ['From Protective Economy to Free Market'](https://www.dropbox.com/s/08azm4iogbbz1de/201308_FactSheet_3.1_From-Protective-Economy-to-Free-Market%281%29.pdf/?raw=1) of with summary of findings and infographics."
+title: Atelier Omgevingsvisie Friesland
+date: June 2016
+thumbnail: thumbnails/Friesland_main.jpg
+img: Friesland.png
+collaborator: Province of Friesland
+category: Omgevingsvisie
+description: "**Project context:** The Province of Friesland is currently rewriting its provincial vision for 2020. **Question:** The Province asked Architectuur Lokaal to organize ateliers with different stakeholders in order to find out the current issues which occur on a local level. VanHooseDotWork was asked by Architectuur Lokaal to lead four workshops wherein stakeholders were asked questions on different theme’s and challenges. **Approach:** During the ateliers we used maps and drawing to capture current data and challenges. These were later combined, analyzed and translated into 10 opportunities to be used by the Province in its vision for 2020. **Results and deliverables:** The results of the workshops were collected in the publication ‘Atelier Omgevinsvisie Friesland’ and given to the Province."
