--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ canonifyUrls = true
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
 		slogan     = "VANHOOSE DOT WORK"
-		subtitle   = "Freelance editor, designer and consultant"
+		subtitle   = "Bringing change to the built environment"
 		buttonText = "Find out more"
 
 
@@ -46,7 +46,7 @@ canonifyUrls = true
 	[params.about]
 		headline    = "VanHooseDotWork"
 		profilePicture = "IMG_4585.jpg"
-		description = "Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for creating and seeing-through sustainable change in cities. My approach includes communication, graphic and analytical skills, which I have developed over the past six years in both professional and academic contexts. I have found this approach to be valuable for a variety of projects and for a number of clients. For an idea of what I can do for you, please see [the services](#services) below or check out [my work](#portfolio) for an example of the topics that keep me busy and excited. Let's get in touch!"
+		description = "Hi! My name is Katherine and I am an American currently based in Utrecht, the Netherlands. I am a designer and researcher with a passion for creating and seeing-through positive change in cities. At VanHooseDotWork we help create impact through a combinatory approach: design thinking, research and strong communication. Thinking outside of the box, finding out more and engaging others. Every problem has a solution: it's about knowing who to engage and which tools to use. Each project is approached with a fresh perspective and there's no copying and pasting. Strong ommunication skills, graphic design, and the ability to develop concepts into creative solutions brings us further in each project that we do, no matter how small or big. We have found this approach to be valuable for a variety of projects and for a number of clients. For an idea of what we can do for you, please see [the services](#services) below or check out [my work](#portfolio) for an example of the topics that keep us busy and excited. Let's get in touch!"
 
 		buttonText  = "Download CV"
 		buttonUrl = 'https://www.dropbox.com/s/nvgi3qt10d0bi6l/VanHoose_CV_ENG_Recent.pdf?raw=1'
